--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "## Introduction",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon server.js",
+    "start": "node index.js",
+    "server" : "nodemon index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -20,5 +21,8 @@
   "homepage": "https://github.com/harvey-magana/node-api1-project#readme",
   "devDependencies": {
     "nodemon": "^2.0.7"
+  },
+  "dependencies": {
+    "nanoid": "^3.1.20"
   }
 }
