--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   },
   "dependencies": {
     "express": "^4.17.1",
-    "nanoid": "^3.1.20"
+    "nanoid": "^3.1.20",
+    "shortid": "^2.2.16"
   }
 }
